some progress for menu bar .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1,4 +1,4 @@
-﻿; *******************************
+; *******************************
 ; FALanguage.ini
 ;
 ; String file of FinalAlert 2
@@ -1111,6 +1111,11 @@ TipDialogNext=下一提示
 TipDialogShowAtStartup=启动时显示
 TipDialogClose=关闭
 TipDialogCaption=每日一贴
+
+; menu strings
+File=文件
+New=新建地图 (Ctrl + N)
+Save=保存 (Ctrl + S)
 
 ; main dialog strings
 MainDialogCaption=%9
