completed menu bar translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1,4 +1,4 @@
-; *******************************
+﻿; *******************************
 ; FALanguage.ini
 ;
 ; String file of FinalAlert 2
@@ -509,6 +509,12 @@ SAVEDLG_FILETYPES=TS maps|*.mpr%8*.map|TS multi maps|*.mpr|TS single maps|*.map|
 
 ; tool tip strings
 TT_TriggerHouse=Defines the house the trigger applies to
+
+Undo=Undo (Ctrl+Z)
+Redo=Redo (Ctrl+Y)
+Copy=Copy (Ctrl+C)
+Paste=Paste (Ctrl+V)
+Manual=Manual (F1)
 
 ; error strings for map validation
 MV_NoMap=This is no map
@@ -1114,8 +1120,73 @@ TipDialogCaption=每日一贴
 
 ; menu strings
 File=文件
-New=新建地图 (Ctrl + N)
+New=新建 (Ctrl + N)
+Open=打开 (Ctrl + O)
 Save=保存 (Ctrl + S)
+Save as=另存为
+Check map=检查错误
+Quit=关闭程序
+
+Edit=编辑
+Undo	Ctrl+Z=撤销 (Ctrl + Z)
+Redo	Ctrl+Y=重做 (Ctrl + Y)
+Manual	F1=帮助菜单 (F1)
+Copy	Ctrl+C=复制 (Ctrl + C)
+Copy whole map=复制整张地图
+Paste	Ctrl+V=粘贴 (Ctrl + V)
+Paste centered=居中粘贴
+Map=地图属性
+Basic=基础设置
+Special flags=特殊设置
+Lighting=光照设置
+Singleplayer settings=单人模式设置
+Houses=参战方设置
+Local variables (Locals)=局部变量设置
+Trigger editor=编辑事件触发
+Tag editor=编辑触发标签
+Scripts=编辑小队脚本
+Taskforces=编辑成员组
+Teams=编辑小队选项
+AI Triggers=编辑AI触发
+AI Trigger enabling=AI触发允许清单
+INI editing=编辑地图INI规则
+
+Terrain=地形
+Raise ground=抬升地表
+Lower ground=降低地表
+Flatten ground=自动平整地表
+Hide tileset=隐藏关联地形块
+Show every tileset=显示关联地形块
+Hide single field=隐藏单元格
+Show all fields=显示全部地形块
+Raise single tile (Be careful!)=抬升单个单元格(谨慎!)
+Lower single tile (Be careful!)=降低单个单元格(谨慎!)
+
+Map tools=工具
+Change map height=修改地表高度
+Autocreate shores=自动生成海岸线
+Auto level using cliffs=自动调整悬崖地表高度
+Paint cliff front=绘制悬崖前部
+Paint cliff back=绘制悬崖后部
+Search Waypoint=查找路径点
+Tool Scripts=工具脚本
+
+Options=选项
+Settings=设置
+Show minimap=显示缩略地图
+Easy mode=精简模式
+Sounds=开启音效
+Show Building Outline=显示建筑轮廓
+Disable AutoShore	CTRL-A=禁止自动产生海岸 (Ctrl + A)
+Disable AutoLat	CTRL-L=禁止自动地表交界 (Ctrl + A)
+Disable Slope Correction=禁用斜坡修正
+Smooth zoom=平滑缩放
+Use default mouse cursor=使用默认鼠标指针
+
+Help=帮助
+Info=关于
+Tip of the day=每日提示
+Show logs=查看日志
 
 ; main dialog strings
 MainDialogCaption=%9
