resolved verify action workflow issues (#4)

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -2,28 +2,21 @@ name: Basic verify
 
 on:
   push:
-    branches: [ "!main", "!RN", "*" ]
+    branches: [ "!main", "!RN" ]
   workflow_dispatch:
-
 
 jobs:
   compile-check:
-    runs-on: windows-2019
+    runs-on: windows-2022
     env:
-      CONFIGURATION: Debug
+      CONFIGURATION: FinalAlertDebug YR
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 1
         submodules: recursive
-    - name: Change configuration to debug for PR
-      if: github.event_name == 'pull_request'
-      shell: bash
-      run: |
-        echo "CONFIGURATION=FinalAlertDebug YR" >> $GITHUB_ENV
-        mkdir Debug || true
-
+        lfs: true
     - name: setup-msvc
       uses: egor-tensin/vs-shell@v2
       with:
