updated CI action trigger condition again

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,8 +1,8 @@
 name: Basic verify
 
 on:
-  push:
-    branches: [ "!main", "!RN" ]
+  pull_request:
+    branches: [ "main", "RN" ]
   workflow_dispatch:
 
 jobs:
