hotkey tips using \t .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1120,20 +1120,20 @@ TipDialogCaption=每日一贴
 
 ; menu strings
 File=文件
-New=新建 (Ctrl + N)
-Open=打开 (Ctrl + O)
-Save=保存 (Ctrl + S)
+New=新建	Ctrl + N
+Open=打开	Ctrl + O
+Save=保存	Ctrl + S
 Save as=另存为
 Check map=检查错误
 Quit=关闭程序
 
 Edit=编辑
-Undo	Ctrl+Z=撤销 (Ctrl + Z)
-Redo	Ctrl+Y=重做 (Ctrl + Y)
-Manual	F1=帮助菜单 (F1)
-Copy	Ctrl+C=复制 (Ctrl + C)
+Undo	Ctrl+Z=撤销	Ctrl + Z
+Redo	Ctrl+Y=重做	Ctrl + Y
+Manual	F1=帮助菜单	F1
+Copy	Ctrl+C=复制	Ctrl + C
 Copy whole map=复制整张地图
-Paste	Ctrl+V=粘贴 (Ctrl + V)
+Paste	Ctrl+V=粘贴	Ctrl + V
 Paste centered=居中粘贴
 Map=地图属性
 Basic=基础设置
@@ -1177,8 +1177,8 @@ Show minimap=显示缩略地图
 Easy mode=精简模式
 Sounds=开启音效
 Show Building Outline=显示建筑轮廓
-Disable AutoShore	CTRL-A=禁止自动产生海岸 (Ctrl + A)
-Disable AutoLat	CTRL-L=禁止自动地表交界 (Ctrl + A)
+Disable AutoShore	CTRL-A=禁止自动产生海岸	Ctrl + A
+Disable AutoLat	CTRL-L=禁止自动地表交界	Ctrl + A
 Disable Slope Correction=禁用斜坡修正
 Smooth zoom=平滑缩放
 Use default mouse cursor=使用默认鼠标指针
