House dialog caption translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1287,6 +1287,7 @@ SingleplayerPostScore=评分屏之后:
 SingleplayerPreMapSelect=预地图选择:
 
 ; houses dialog
+Countries=参战方
 HousesDesc=参战方(国家)指不同的游戏者，AI和人类。如果是多人地图，在这里不要建立任何参战方！如果是单人地图，并且未设置参战方，首先单击[标准参战方]，如果需要可添加新参战方，然后选择人类玩家的参战方(不要忘记选中[游戏者控制])！
 HousesPlayerHouse=人类玩家参战方:
 HousesHouse=当前参战方:
