--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1326,6 +1326,19 @@ LoadInitDDraw=初始化 Direct Draw 6 ...
 LoadInitPics=正在载入图像...
 LoadExtractStdMixFiles=正在打开 std.mix 文件(可能需要一些时间)
 
+; trigger editor
+TriggerDesc=选择当前触发：
+TriggerName=nam
+TriggerNew=新建
+TriggerPlaceOnMap=放置单元标记
+TriggerClone=复制
+TriggerDelete=删除
+TriggerOptionType=类型（会同步至全部关联标记）
+TriggerOptionName=名称：
+TriggerOptionHouse=所属方：
+TriggerOptionAttachedTrigger=关联的触发
+TriggerOptionDisableTip=被禁止的触发必须由其它触发激活后才能继续运作
+
 ; iso view
 IsoCaption=地图视图
 
@@ -1475,46 +1488,6 @@ InfP5=允许AI重组::
 ; Now some translations from english to the used language (used for some combo-boxes, menus/listviews and of course unit names)
 ; currently used for: menu, iso-view status bar, unit/building/stuff list, overlay browser, terrain browser
 
-
-; FA2:YR
-FinalAlert 2(tm) Fansite link=%9 Fansite link
-FinalAlert 2(tm) Forum=%9 Forum
-
-[English-TranslationsRA2]
-Tiberium=Ore
-Run Tiberian Sun=Run Red Alert 2
-Tiberium Tree=Ore mine
-Countries=Houses; For the edit->houses dialog
-FinalSun Homepage=FinalAlert Homepage
-FinalSun support forum=FinalAlert support forum
-AutoCreate shores=Automatically create shore (AutoShore)
-Tiberium (Blue)=Ore
-Tiberium (Green)=Ore
-
-[English-Translations]
-; tooltips
-Make terrain flat=Flatten ground
-Raise a single tile=Raise single field (Not recommended!)
-Lower a single tile=Lower single field (Not recommended!)
-AutoCreate shores=Automatically create shore (only supported in FinalAlert)
-Autocreate shores=Automatically create shore (AutoShore)
-AutoLevel terrain height using cliffs=AutoLevel ground height using cliffs
-Auto level using cliffs=AutoLevel ground height using cliffs
-
-; other
-Bridge 1=Bridge topleft-bottomright
-Bridge 2=Bridge bottomleft-topright
-Railroad Bridge 1=Railroad bridge topleft-bottomright
-Railroad Bridge 2=Railroad bridge bottomleft-topright
-Wood Bridge 1=Wood bridge topleft-bottomright
-Wood Bridge 2=Wood bridge bottomleft-topright
-Easy mode=Beginner mode
-
-; FA2:YR
-FinalAlert 2(tm) Fansite link=%9 Fansite link
-FinalAlert 2(tm) Forum=%9 Forum
-
-[Chinese-TranslationsRA2]
 Tiberium=矿石
 Run Tiberian Sun=运行尤里的复仇
 Tiberium Tree=矿井
@@ -1525,7 +1498,6 @@ AutoCreate shores=自动建立海滨(自动海滨)
 Tiberium (Blue)=蓝色矿石
 Tiberium (Green)=绿色矿石
 
-[Chinese-Translations]
 ; tooltips
 Make terrain flat=平整地面
 Raise a single tile=升高单个区域(不推荐)
@@ -1926,6 +1898,46 @@ Infantry=步兵单位
 Vehicles=机动部队
 Factories=工厂
 Base defenses=防御类建筑
+
+; FA2:YR
+FinalAlert 2(tm) Fansite link=%9 Fansite link
+FinalAlert 2(tm) Forum=%9 Forum
+
+[English-TranslationsRA2]
+Tiberium=Ore
+Run Tiberian Sun=Run Red Alert 2
+Tiberium Tree=Ore mine
+Countries=Houses; For the edit->houses dialog
+FinalSun Homepage=FinalAlert Homepage
+FinalSun support forum=FinalAlert support forum
+AutoCreate shores=Automatically create shore (AutoShore)
+Tiberium (Blue)=Ore
+Tiberium (Green)=Ore
+
+[English-Translations]
+; tooltips
+Make terrain flat=Flatten ground
+Raise a single tile=Raise single field (Not recommended!)
+Lower a single tile=Lower single field (Not recommended!)
+AutoCreate shores=Automatically create shore (only supported in FinalAlert)
+Autocreate shores=Automatically create shore (AutoShore)
+AutoLevel terrain height using cliffs=AutoLevel ground height using cliffs
+Auto level using cliffs=AutoLevel ground height using cliffs
+
+; other
+Bridge 1=Bridge topleft-bottomright
+Bridge 2=Bridge bottomleft-topright
+Railroad Bridge 1=Railroad bridge topleft-bottomright
+Railroad Bridge 2=Railroad bridge bottomleft-topright
+Wood Bridge 1=Wood bridge topleft-bottomright
+Wood Bridge 2=Wood bridge bottomleft-topright
+Easy mode=Beginner mode
+
+; FA2:YR
+FinalAlert 2(tm) Fansite link=%9 Fansite link
+FinalAlert 2(tm) Forum=%9 Forum
+
+
 
 
 
