map property translations .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -408,9 +408,9 @@ LTEXT           "Theater:", IDC_LTHEATER, 12, 159, 284, 11
 COMBOBOX        IDC_THEATER, 10, 170, 90, 45, CBS_DROPDOWN | CBS_SORT | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
 PUSHBUTTON      "Change", IDC_CHANGELOCAL, 111, 131, 70, 13
 PUSHBUTTON      "Change", IDC_CHANGE, 212, 67, 70, 13
-LTEXT           "Width:", IDC_STATIC, 12, 56, 93, 9
+LTEXT           "Width:", IDC_MAP_D_WIDTH, 12, 56, 93, 9
 EDITTEXT        IDC__SIZEY, 106, 67, 90, 12, ES_AUTOHSCROLL | ES_READONLY
-LTEXT           "Height:", IDC_STATIC, 107, 56, 93, 9
+LTEXT           "Height:", IDC_MAP_D_HEIGHT, 107, 56, 93, 9
 END
 
 IDD_INPUTBOX DIALOG 0, 0, 214, 70
