--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1264,12 +1264,16 @@ BasicInitTime=初始化时间:
 BasicAddOnNeeded=附加数据:
 
 ; mapinfo dialog
+Map Properties=地图属性
 MapDesc=通用地图属性:
 MapSizeFrame=地图尺寸
 MapSize=整个地图的尺寸，由 MapPack 使用。
 MapVisibleSizeFrame=可见区域
 MapVisibleSize=地图的可见区域。格式：左, 上, 宽, 高。
 MapTheater=地图类型：
+MapWidth=宽度：
+MapHeight=高度：
+MapChange=应用更改
 
 ; singleplayer basics dialog
 SingleplayerDesc=单人地图的附加设置。
