tip dialog caption change .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1116,7 +1116,7 @@ CG_IDP_FILE_CORRUPT=提示文件语法错误
 TipDialogNext=下一提示
 TipDialogShowAtStartup=启动时显示
 TipDialogClose=关闭
-TipDialogCaption=每日一贴
+TipDialogCaption=您知道吗
 
 ; menu strings
 File=文件
