fixed some sorting logic issues, enriched side category definition in INI file .

--- a/MissionEditor/data/FinalAlert2/FAData.ini
+++ b/MissionEditor/data/FinalAlert2/FAData.ini
@@ -11,6 +11,20 @@ AllowTunnels=yes
 AllowUnidirectionalTunnels=yes
 ;ShowBuildingsWithToTile=no
 
+[Sides]
+0=Allied
+1=Soviet
+2=Yuri
+3=安塔列星
+4=科技功能建筑,1
+5=地标建筑类,1
+6=大城市建筑,1
+7=中小城市建筑,1
+8=村庄建筑,1
+9=工业建筑,1
+10=小型装饰摆件,1
+11=中立特殊建筑,1
+
 [ForceUnitPalettePrefix]
 0=TIBTRE
 
