--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1061,10 +1061,10 @@ No=否
 NeedsYR=要用此地图进行游戏，需要尤里的复仇。
 
 ; name replacements
-;N_AMRADR=American Air Force Command HQ
-;N_SENGINEER=Soviet Engineer
-;N_ENGINEER=Allied Engineer
-;N_YENGINEER=Yuri Engineer
+N_AMRADR=美国空指部
+N_SENGINEER=苏军工程师
+N_ENGINEER=盟军工程师
+N_YENGINEER=尤里工程师
 ;N_SCHD=Deployed Siege Helicopter
 ;N_GACSPH=Chronosphere
 ;N_CALOND04=London Parliament
