--- a/MissionEditor/MissionEditor.vcxproj
+++ b/MissionEditor/MissionEditor.vcxproj
@@ -348,7 +348,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='FinalAlertDebug YR|x64'">
     <ClCompile>
       <PreprocessorDefinitions>NOMINMAX;RA2_MODE;YR_MODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\MissionEditorPackLib</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\MissionEditorPackLib;..\3rdParty\CncVxlRender\inc</AdditionalIncludeDirectories>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>RA2_MODE;YR_MODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -589,6 +589,7 @@
     <ClCompile Include="UserScriptsDlg.cpp" />
     <ClCompile Include="variables.cpp" />
     <ClCompile Include="ViewObjects.cpp" />
+    <ClCompile Include="VoxelDrawer.cpp" />
     <ClCompile Include="WaypointID.cpp" />
     <ClCompile Include="MapCode.cpp" />
   </ItemGroup>
@@ -691,6 +692,7 @@
     <ClInclude Include="variables.h" />
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="ViewObjects.h" />
+    <ClInclude Include="VoxelDrawer.h" />
     <ClInclude Include="WaypointID.h" />
     <ClInclude Include="MapCode.h" />
   </ItemGroup>
