--- a/MissionEditor/MissionEditor.vcxproj.filters
+++ b/MissionEditor/MissionEditor.vcxproj.filters
@@ -288,6 +288,9 @@
     <ClCompile Include="Palettes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VoxelDrawer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MissionEditor.rc">
@@ -584,6 +587,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Palettes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VoxelDrawer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
