#21, added Debug.RenderPlainHouseColor control so remap color will be highlighted as older version .

--- a/MissionEditor/data/FinalAlert2/FAData.ini
+++ b/MissionEditor/data/FinalAlert2/FAData.ini
@@ -1,6 +1,6 @@
 ﻿; FAData.ini - Data file for FinalAlert 2: Yuri's Revenge
 ; This file offers data for FinalAlert 2
-; last change: Matthias Wagner, Feb 12, 2024
+; last change: Zero Fanker, June 1, 2024
 
 ; Debug section: use carefully!
 [Debug]
@@ -10,6 +10,7 @@
 AllowTunnels=yes
 AllowUnidirectionalTunnels=yes
 ;ShowBuildingsWithToTile=no
+RenderPlainHouseColor=yes
 
 [Sides]
 0=Allied
