enabled tunnel logic .

--- a/MissionEditor/data/FinalAlert2/FAData.ini
+++ b/MissionEditor/data/FinalAlert2/FAData.ini
@@ -5,8 +5,8 @@
 ; Debug section: use carefully!
 [Debug]
 ;DisplayAllOverlay=Yes ; Doesn´t cripple the overlay list in any way
-;EnableTrackLogic=Yes ; Enables Track Logic
 ;IgnoreSHPImageHeadUnused=Yes ; Use this *carefully* to make SHP graphics of some mods work that incorrectly have the shadow flag set
+EnableTrackLogic=Yes ; Enables Track Logic
 AllowTunnels=yes
 AllowUnidirectionalTunnels=yes
 ;ShowBuildingsWithToTile=no
