#44, fixed redundant'HousesActsLike' .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -573,7 +573,9 @@ LTEXT           "Allies:", IDC_LALLIES, 10, 165, 40, 10
 EDITTEXT        IDC_ALLIES, 55, 165, 70, 12, ES_AUTOHSCROLL
 LTEXT           "Credits (x100):", IDC_LCREDITS, 10, 181, 40, 17
 EDITTEXT        IDC_CREDITS, 55, 179, 70, 12, ES_AUTOHSCROLL
+#ifndef RA2_MODE
 LTEXT           "Acts like:", IDC_LACTSLIKE, 150, 105, 69, 14
+#endif
 COMBOBOX        IDC_ACTSLIKE, 227, 105, 70, 50, CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 LTEXT           "Nodecount:", IDC_LNODECOUNT, 150, 119, 68, 15
 COMBOBOX        IDC_NODECOUNT, 227, 120, 70, 50, CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
