--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1343,6 +1343,20 @@ TriggerOptionHouse=所属方：
 TriggerOptionAttachedTrigger=关联的触发
 TriggerOptionDisableTip=被禁止的触发必须由其它触发激活后才能继续运作
 
+; team scripts
+ScriptTypesAddScript=添加
+ScriptTypesDelScript=删除
+ScriptsCaption=小队脚本
+ScriptTypesDesc=脚本类型允许你定义如一作战小队从一个路径点移动到另一路径点。一个脚本类型与小队类型相关联(不是特遣部队！)\n欲应用模板，请在下拉列表里选中一个预置模板，然后点击“新建”。\n如果预置列表里啥都没有，可以点击“刷新”以重新载入。
+ScriptTypesSelectedScript=脚本类型:
+ScriptTypesName=名称:
+ScriptTypesActions=行为:
+ScriptTypesActionType=行为类型:
+ScriptTypesActionParam=行为参数:
+ScriptTypesAddAction=添加
+ScriptTypesDelAction=删除
+ScriptTypesActionDesc=说明:
+
 ; iso view
 IsoCaption=地图视图
 
