--- a/MissionEditor/MissionEditor.vcxproj.filters
+++ b/MissionEditor/MissionEditor.vcxproj.filters
@@ -601,6 +601,9 @@
     <ClInclude Include="VoxelDrawer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\clifftoo.bmp">
