simplified edit menu translation (ZH_CN)

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1142,14 +1142,14 @@ Lighting=光照设置
 Singleplayer settings=单人模式设置
 Houses=参战方设置
 Local variables (Locals)=局部变量设置
-Trigger editor=编辑事件触发
-Tag editor=编辑触发标签
-Scripts=编辑小队脚本
-Taskforces=编辑成员组
-Teams=编辑小队选项
-AI Triggers=编辑AI触发
+Trigger editor=事件触发
+Tag editor=触发标签
+Scripts=小队脚本
+Taskforces=成员组
+Teams=小队选项
+AI Triggers=AI触发
 AI Trigger enabling=AI触发允许清单
-INI editing=编辑地图INI规则
+INI editing=地图INI规则
 
 Terrain=地形
 Raise ground=抬升地表
