implemented tool setting bar 'brush size' translation support .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1161,6 +1161,7 @@ Hide single field=隐藏单元格
 Show all fields=显示全部地形块
 Raise single tile (Be careful!)=抬升单个单元格(谨慎!)
 Lower single tile (Be careful!)=降低单个单元格(谨慎!)
+ToolSettingsBarBrushSize=笔刷尺寸:
 
 Map tools=工具
 Change map height=修改地表高度
