added some missing translations, adjusted some wording .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1518,11 +1518,14 @@ Tiberium (Blue)=蓝色矿石
 Tiberium (Green)=绿色矿石
 
 ; tooltips
+Heighten ground (slope logic)=抬高地块（自动斜坡）
+Lower ground (slope logic)=降低地块（自动斜坡）
+Show all tilesets=显示所有隐藏地块
+Switch Framework Mode=切换框架模式显示
 Make terrain flat=平整地面
 Raise a single tile=升高单个区域(不推荐)
 Lower a single tile=降低单个区域(不推荐)
-AutoCreate shores=自动建立海岸线(只在 FinalAlert 中支持)
-Autocreate shores=自动建立海岸(自动海岸)
+Autocreate shores=自动产生海岸
 AutoLevel terrain height using cliffs=自动调整设置悬崖的地表高度
 Auto level using cliffs=自动调整设置悬崖的地表高度
 
