terrain dialog translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1528,6 +1528,8 @@ Lower a single tile=降低单个区域(不推荐)
 Autocreate shores=自动产生海岸
 AutoLevel terrain height using cliffs=自动调整设置悬崖的地表高度
 Auto level using cliffs=自动调整设置悬崖的地表高度
+TerrainDlgTerrainGround=地形/地表：
+TerrainDlgOverlaySpecial=覆盖物/特殊：
 
 ; other
 Bridge 1=桥梁 左上-右下
