--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1085,14 +1085,14 @@ PUSHBUTTON      "Delete = Disable AITrigger", IDC_DELETE, 192, 81, 102, 15
 PUSHBUTTON      "Add = Enable AITrigger", IDC_ADD, 85, 81, 102, 15
 END
 
-IDD_TERRAINBAR DIALOG 0, 0, 387, 29
+IDD_TERRAINBAR DIALOGEX 0, 0, 465, 29
 STYLE DS_SETFONT | WS_CHILD
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-LTEXT           "Terrain / Ground:", IDC_STATIC, 7, 7, 32, 20
-COMBOBOX        IDC_TILESET, 42, 7, 141, 169, CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-LTEXT           "Overlay && Special:", IDC_STATIC, 204, 7, 32, 20
-COMBOBOX        IDC_OVERLAY, 239, 7, 141, 169, CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Terrain / Ground:",IDD_TERRAINBAR_TG,7,7,80,20
+    COMBOBOX        IDC_TILESET,64,7,141,169,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Overlay && Special:",IDD_TERRAINBAR_OS,211,8,85,20
+    COMBOBOX        IDC_OVERLAY,271,8,141,169,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_TOOLSETTINGS DIALOGEX 0, 0, 116, 17
